new footer edits and queries

--- a/brothers.html
+++ b/brothers.html
@@ -378,6 +378,30 @@
   }
   .profile-image-container { height: 140px; }
 }
+/* Base: phones (default) — 2 per row */
+.brothers-grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 24px;
+}
+
+/* Medium screens (tablets & small laptops): 3 per row */
+@media (min-width: 768px) {
+  .brothers-grid {
+    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+  }
+}
+
+/* Laptops & desktops: 4 per row */
+@media (min-width: 992px) {
+  .brothers-grid {
+    grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
+  }
+}
+/* Tweak image heights per breakpoint (optional) */
+.profile-image-container { height: 180px; }          /* phones */
+@media (min-width: 768px) { .profile-image-container { height: 220px; } }  /* medium */
+@media (min-width: 992px) { .profile-image-container { height: 250px; } }  /* large */
 
 
 
