--- a/brothers.html
+++ b/brothers.html
@@ -495,7 +495,7 @@
 <!-- Brooke O Sullivan -->
 <div class="profile-card">
   <div class="profile-image-container">
-    <img src="assets/brother-images-compressed/BrookeOSullivan.jpeg" alt="Brooke O Sullivan" class="profile-image">
+    <img src="assets/brother-images-compressed/BrookeOSullivan.jpeg" alt="Brooke O'Sullivan" class="profile-image">
     <div class="linkedin-overlay">
       <a href="https://www.linkedin.com/in/brooke-osullivan/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
         <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -504,7 +504,7 @@
     </div>
   </div>
   <div class="profile-info">
-    <div class="profile-name">Brooke O Sullivan</div>
+    <div class="profile-name">Brooke O'Sullivan</div>
   </div>
 </div>
 
@@ -648,7 +648,7 @@
     </div>
   </div>
   <div class="profile-info">
-    <div class="profile-name">Emmy Abella Domingues da silva</div>
+    <div class="profile-name">Emmy Abella Domingues da Silva</div>
   </div>
 </div>
 
@@ -924,6 +924,22 @@
   </div>
 </div>
 
+          <!-- Joseph Quinn -->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images-compressed/JosephQuinn.png" alt="Joseph Quinn" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/josephjquinn/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Joe Quinn</div>
+            </div>
+          </div>
+
 <!-- John Akok Ring Akok -->
 <div class="profile-card">
   <div class="profile-image-container">
@@ -953,22 +969,6 @@
   </div>
   <div class="profile-info">
     <div class="profile-name">Jolie Hawthorne</div>
-  </div>
-</div>
-
-<!-- Joseph Quinn -->
-<div class="profile-card">
-  <div class="profile-image-container">
-    <img src="assets/brother-images-compressed/JosephQuinn.png" alt="Joseph Quinn" class="profile-image">
-    <div class="linkedin-overlay">
-      <a href="https://www.linkedin.com/in/josephjquinn/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
-        <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
-        <span>View Profile</span>
-      </a>
-    </div>
-  </div>
-  <div class="profile-info">
-    <div class="profile-name">Joe Quinn</div>
   </div>
 </div>
 
@@ -1163,6 +1163,22 @@
   </div>
 </div>
 
+          <!-- Ludvig Denker -->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images-compressed/LudvigDenker.jpeg" alt="Ludvig Denker" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/ludvig-denker/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Ludvig Denker</div>
+            </div>
+          </div>
+
 <!-- Luke Golumbic -->
 <div class="profile-card">
   <div class="profile-image-container">
@@ -1179,21 +1195,6 @@
   </div>
 </div>
 
-<!-- Ludvig Denker -->
-<div class="profile-card">
-  <div class="profile-image-container">
-    <img src="assets/brother-images-compressed/LudvigDenker.jpeg" alt="Ludvig Denker" class="profile-image">
-    <div class="linkedin-overlay">
-      <a href="https://www.linkedin.com/in/ludvig-denker/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
-        <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
-        <span>View Profile</span>
-      </a>
-    </div>
-  </div>
-  <div class="profile-info">
-    <div class="profile-name">Ludvig Denker</div>
-  </div>
-</div>
 
 <!-- Mai-Xuan Mantwill -->
 <div class="profile-card">
@@ -1287,7 +1288,7 @@
     </div>
   </div>
   <div class="profile-info">
-    <div class="profile-name">Moses Bandabilt</div>
+    <div class="profile-name">Moses Banda</div>
   </div>
 </div>
 
@@ -1435,22 +1436,6 @@
   </div>
 </div>
 
-<!-- Sarah Finfrock -->
-<div class="profile-card">
-  <div class="profile-image-container">
-    <img src="assets/brother-images-compressed/SarahFinfrock.jpeg" alt="Sarah Finfrock" class="profile-image">
-    <div class="linkedin-overlay">
-      <a href="https://www.linkedin.com/in/sarah-finfrock/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
-        <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
-        <span>View Profile</span>
-      </a>
-    </div>
-  </div>
-  <div class="profile-info">
-    <div class="profile-name">Sarah Finfrock</div>
-  </div>
-</div>
-
 <!-- Sarah Goldstein -->
 <div class="profile-card">
   <div class="profile-image-container">
@@ -1466,6 +1451,22 @@
     <div class="profile-name">Sarah Goldstein</div>
   </div>
 </div>
+
+          <!-- Sarah Finfrock -->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images-compressed/SarahFinfrock.jpeg" alt="Sarah Finfrock" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/sarah-finfrock/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images-compressed/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Sarah Finfrock</div>
+            </div>
+          </div>
 
 <!-- Sharv Save -->
 <div class="profile-card">
