--- a/recruitment.html
+++ b/recruitment.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kappa Theta Pi – Vanderbilt</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-      <link rel="icon" href="images/favicon.png">
+      <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="manifest" href="/manifest.json">
 
     <!-- Structured Data for Recruitment Page -->
