update to favicon link

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 <title>About - Kappa Theta Pi Vanderbilt</title>
 <meta name="description" content="Learn about Kappa Theta Pi at Vanderbilt University - our mission, leadership, and what makes us unique">
 
-<link rel="icon" type="image/x-icon" href="images/favicon.png">
+<link rel="icon" type="image/png" href="images/favicon.png">
 <link rel="manifest" href="/manifest.json">
 
 <!-- Structured Data for About Page -->
