--- a/brothers.html
+++ b/brothers.html
@@ -11,7 +11,7 @@
       name="description"
       content="Meet the brothers of Kappa Theta Pi - Vanderbilt's premier professional technology fraternity"
     />
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Bootstrap CSS -->
