fix Lolita's name

--- a/brothers.html
+++ b/brothers.html
@@ -2896,7 +2896,7 @@
             </div>
           </div>
 
-          <!-- Zofia Luther -->
+          <!-- Lolita Rozenbaum -->
           <div class="profile-card">
             <div class="profile-image-container">
               <img
@@ -2921,7 +2921,7 @@
               </div>
             </div>
             <div class="profile-info">
-              <div class="profile-name">Lorita Rozenbaum</div>
+              <div class="profile-name">Lolita Rozenbaum</div>
               <div class="profile-title">Alumni</div>
             </div>
           </div>
