--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kappa Theta Pi - Vanderbilt</title>
-    <link rel="icon" type="image/png" href="images/favicon.png">
-  <link rel="manifest" href="/manifest.json">
+    
+    <!-- Default favicon (root, ICO format for widest support) -->
+<link rel="icon" href="/favicon.ico" sizes="any">
+
+<!-- PNG favicons for modern browsers and Google Search -->
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="180x180" href="/images/favicon-180x180.png"> <!-- iOS high DPI -->
+
+<!-- Apple Touch Icon (iOS home screen bookmark) -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+
+<!-- Safari pinned tab (macOS/iOS) -->
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#2a2a2a">
+
+<!-- Windows tiles (optional, for pinned start menu tiles) -->
+<meta name="msapplication-TileColor" content="#2a2a2a">
+<meta name="theme-color" content="#2a2a2a">
+
+<link rel="manifest" href="/manifest.json">
   
   <!-- Cache Manager for instant loading -->
   <script src="js/cache-manager.js"></script>
