buttons in index.html

--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@
       display: inline-block;
       background-color: #2F4A8A;
       color: white;
-      padding: 12px 24px;
+      padding: 14px 28px;
       text-decoration: none;
       border-radius: 4px;
       font-weight: 600;
+      font-size: 1.1rem;
       transition: background-color 0.3s;
     }
 
@@ -207,7 +208,7 @@
 
     .hero-content {
       position: absolute;
-      top: 50%;
+      top: 45%;
       left: 8%;
       transform: translateY(-50%);
       text-align: left;
@@ -217,13 +218,29 @@
     }
 
     .hero-content h1 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       margin-bottom: 0.5rem;
     }
 
     .hero-content p {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       margin-bottom: 1rem;
+    }
+
+    .hero-content .btn {
+      background-color: #2F4A8A;
+      color: white;
+      padding: 14px 28px;
+      font-weight: 600;
+      border-radius: 4px;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1.1rem;
+      transition: background-color 0.3s;
+    }
+
+    .hero-content .btn:hover {
+      background-color: #22366c;
     }
 
     /* WELCOME TO KTP */
@@ -239,13 +256,13 @@
     }
 
     .intro h2 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 2rem;
       font-weight: 700;
     }
 
     .intro p {
-      font-size: 1.125rem;
+      font-size: 1.25rem;
       line-height: 1.8;
       color: #222;
     }
@@ -291,14 +308,30 @@
     }
 
     .involvement-content h2 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 1rem;
     }
 
     .involvement-content p {
-      font-size: 1.25rem;
+      font-size: 1.4rem;
       margin-bottom: 1.5rem;
       line-height: 1.6;
+    }
+
+    .involvement-content .btn {
+      background-color: #2F4A8A;
+      color: white;
+      padding: 14px 28px;
+      font-weight: 600;
+      border-radius: 4px;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1.1rem;
+      transition: background-color 0.3s;
+    }
+
+    .involvement-content .btn:hover {
+      background-color: #22366c;
     }
 
     /* Learn About Brothers Section */
@@ -349,14 +382,30 @@
     }
 
     .brothers-content h2 {
-      font-size: 3rem;
+      font-size: 3.3rem;
       margin-bottom: 1rem;
     }
 
     .brothers-content p {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       margin-bottom: 2rem;
       line-height: 1.6;
+    }
+
+    .brothers-content .btn {
+      background-color: #2F4A8A;
+      color: white;
+      padding: 14px 28px;
+      font-weight: 600;
+      border-radius: 4px;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1.1rem;
+      transition: background-color 0.3s;
+    }
+
+    .brothers-content .btn:hover {
+      background-color: #22366c;
     }
 
     /* Get Comfortable Section */
@@ -382,13 +431,13 @@
     }
 
     .comfortable-text h5 {
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: 400;
       margin-bottom: 1rem;
     }
 
     .comfortable-text h2 {
-      font-size: 2.8rem;
+      font-size: 3.1rem;
       font-weight: 700;
       line-height: 1.2;
       margin: 0 0 1.5rem 0;
@@ -406,6 +455,22 @@
       height: auto;
       border-radius: 0.5rem;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .comfortable-text .btn {
+      background-color: #2F4A8A;
+      color: white;
+      padding: 14px 28px;
+      font-weight: 600;
+      border-radius: 4px;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1.1rem;
+      transition: background-color 0.3s;
+    }
+
+    .comfortable-text .btn:hover {
+      background-color: #22366c;
     }
 
     /* Sections */
@@ -484,7 +549,7 @@
     }
 
     .learn-more-content h2 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 1.5rem;
       font-weight: 700;
     }
@@ -492,13 +557,14 @@
     .learn-more-content .btn {
       background-color: #2F4A8A;
       color: white;
-      padding: 12px 24px;
+      padding: 14px 28px;
       font-weight: bold;
       border-radius: 6px;
+      font-size: 1.1rem;
     }
 
     .learn-more-content .btn:hover {
-      background-color: #ddd;
+      background-color: #22366c;
     }
   </style>
 </head>
