sliding image update

--- a/recruitment.html
+++ b/recruitment.html
@@ -394,6 +394,23 @@
   <div class="slide"><img src="images-compressed/companies/microsoft -.png" alt="Microsoft"></div>
   <div class="slide"><img src="images-compressed/companies/Nvidia-.jpg" alt="Nvidia"></div>
   <div class="slide"><img src="images-compressed/companies/Netflix-.jpg" alt="Netflix"></div>
+
+  <div class="slide"><img src="images-compressed/companies/bcg.png" alt="BCG"></div>
+  <div class="slide"><img src="images-compressed/companies/goldmansachs.png" alt="Goldman Sachs"></div>
+  <div class="slide"><img src="images-compressed/companies/jpmorgan.png" alt="JPMorgan"></div>
+  <div class="slide"><img src="images-compressed/companies/bostonscientific.png" alt="bostonscientific"></div>
+  <div class="slide"><img src="images-compressed/companies/intuit.png" alt="intuit"></div>
+  <div class="slide"><img src="images-compressed/companies/oracle.png" alt="oracle"></div>
+  <div class="slide"><img src="images-compressed/companies/palantir.png" alt="palantir"></div>
+  <div class="slide"><img src="images-compressed/companies/statefarm.png" alt="statefarm"></div>
+  <div class="slide"><img src="images-compressed/companies/stifel.png" alt="stifel"></div>
+  <div class="slide"><img src="images-compressed/companies/tesla.png" alt="tesla"></div>
+  <div class="slide"><img src="images-compressed/companies/ubs.png" alt="ubs"></div>
+  <div class="slide"><img src="images-compressed/companies/amazon.png" alt="amazon"></div>
+
+
+
+
   <div class="next">&#10095;</div>
 </section>
 
