updated logo companies

--- a/recruitment.html
+++ b/recruitment.html
@@ -395,18 +395,18 @@
   <div class="slide"><img src="images-compressed/companies/Nvidia-.jpg" alt="Nvidia"></div>
   <div class="slide"><img src="images-compressed/companies/Netflix-.jpg" alt="Netflix"></div>
 
-  <div class="slide"><img src="images-compressed/companies/bcg.png" alt="BCG"></div>
-  <div class="slide"><img src="images-compressed/companies/goldmansachs.png" alt="Goldman Sachs"></div>
-  <div class="slide"><img src="images-compressed/companies/jpmorgan.png" alt="JPMorgan"></div>
-  <div class="slide"><img src="images-compressed/companies/bostonscientific.png" alt="bostonscientific"></div>
-  <div class="slide"><img src="images-compressed/companies/intuit.png" alt="intuit"></div>
-  <div class="slide"><img src="images-compressed/companies/oracle.png" alt="oracle"></div>
-  <div class="slide"><img src="images-compressed/companies/palantir.png" alt="palantir"></div>
-  <div class="slide"><img src="images-compressed/companies/statefarm.png" alt="statefarm"></div>
-  <div class="slide"><img src="images-compressed/companies/stifel.png" alt="stifel"></div>
-  <div class="slide"><img src="images-compressed/companies/tesla.png" alt="tesla"></div>
-  <div class="slide"><img src="images-compressed/companies/ubs.png" alt="ubs"></div>
-  <div class="slide"><img src="images-compressed/companies/amazon.png" alt="amazon"></div>
+  <div class="slide"><img src="images-compressed/companies/bcg.jpg" alt="BCG"></div>
+  <div class="slide"><img src="images-compressed/companies/goldmansachs.jpg" alt="Goldman Sachs"></div>
+  <div class="slide"><img src="images-compressed/companies/jpmorgan.jpg" alt="JPMorgan"></div>
+  <div class="slide"><img src="images-compressed/companies/bostonscientific.jpg" alt="bostonscientific"></div>
+  <div class="slide"><img src="images-compressed/companies/intuit.jpg" alt="intuit"></div>
+  <div class="slide"><img src="images-compressed/companies/oracle.jpg" alt="oracle"></div>
+  <div class="slide"><img src="images-compressed/companies/palantir.jpg" alt="palantir"></div>
+  <div class="slide"><img src="images-compressed/companies/statefarm.jpg" alt="statefarm"></div>
+  <div class="slide"><img src="images-compressed/companies/stifel.jpg" alt="stifel"></div>
+  <div class="slide"><img src="images-compressed/companies/tesla.jpg" alt="tesla"></div>
+  <div class="slide"><img src="images-compressed/companies/ubs.jpg" alt="ubs"></div>
+  <div class="slide"><img src="images-compressed/companies/amazon.jpg" alt="amazon"></div>
 
 
 
@@ -422,7 +422,7 @@
 </section>
 
 <section class="flyer-section">
-  <a class="btn" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_0eARXFbkw1p_AEsu750HNfUg7SaVlgFC3XJYEnEHXxr1Tw/closedform">Opening Soon!</a>
+  <a class="btn" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_0eARXFbkw1p_AEsu750HNfUg7SaVlgFC3XJYEnEHXxr1Tw/closedform">Open Application!</a>
   <div class="flyer-container" >
     <img src="images-compressed/flyerRush2025.jpg" alt="Rush Flyer" class="flyer-img" />
   </div>
