--- a/recruitment.html
+++ b/recruitment.html
@@ -279,7 +279,7 @@
       display: inline-block;
       margin-bottom: 30px;
       font-weight: 500;
-      font-size: 1.1rem
+      font-size: 1.1rem;
     }
 
     .btn:hover {
