--- a/recruitment.html
+++ b/recruitment.html
@@ -272,8 +272,8 @@
     }
 
     .btn {
-      background: var(--primary);
-      color: var(--white);
+      background: #2F4A8A; 
+      color: #ffffff;
       padding: 12px 24px;
       border-radius: 6px;
       display: inline-block;
