--- a/recruitment.html
+++ b/recruitment.html
@@ -272,18 +272,21 @@
     }
 
     .btn {
-      background: #2F4A8A; 
-      color: #ffffff;
-      padding: 12px 24px;
-      border-radius: 6px;
-      display: inline-block;
-      margin-bottom: 30px;
-      font-weight: 500;
-      font-size: 1.1rem;
+      display: inline-block !important;
+      background-color: #2F4A8A !important;
+      color: white !important;
+      padding: 14px 28px !important;
+      text-decoration: none !important;
+      border-radius: 4px !important;
+      font-weight: 600 !important;
+      font-size: 1.1rem !important;
+      transition: background-color 0.3s !important;
+      margin-bottom: 30px !important;
+      border: none !important;
     }
 
     .btn:hover {
-      background: #1e3365;
+      background-color: #22366c !important;
     }
 
     .flyer-img {
