--- a/brothers.html
+++ b/brothers.html
@@ -138,26 +138,17 @@
         }
       }
 
-      /* Cards */
+      /* Direct Images */
       .profile-card {
-        background: var(--white);
-        border-radius: 15px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-        overflow: hidden;
         position: relative;
-      }
-      .profile-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+        text-align: center;
       }
 
       .profile-image-container {
         position: relative;
         width: 100%;
         height: 180px;
-        overflow: hidden;
-        z-index: 1;
+        margin-bottom: 10px;
       }
       @media (min-width: 768px) {
         .profile-image-container {
@@ -174,10 +165,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transition: transform 0.3s ease;
-      }
-      .profile-card:hover .profile-image {
-        transform: scale(1.05);
+        border-radius: 0;
       }
 
       /* Overlay (desktop only) */
@@ -246,9 +234,6 @@
       }
 
       /* Exec styling */
-      .exec-section .profile-card {
-        background: linear-gradient(135deg, var(--light-gray), var(--white));
-      }
       .exec-section .profile-name {
         color: var(--primary);
         font-weight: 600;
