--- a/ktp-in-action.html
+++ b/ktp-in-action.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KTP in Action - Kappa Theta Pi Vanderbilt</title>
 
-  <!-- Default favicon (root, ICO format for widest support) -->
-<link rel="icon" href="/favicon.ico" sizes="any">
+<!-- Default favicon (root, ICO format for widest support) -->
+<link rel="icon" href="/faviconktp.ico" sizes="any">
 
 <!-- PNG favicons for modern browsers and Google Search -->
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="180x180" href="/images/favicon-180x180.png"> <!-- iOS high DPI -->
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96.png">
+<link rel="icon" type="image/png" sizes="180x180" href="/images/favicon-180.png"> <!-- iOS high DPI -->
 
 <!-- Windows tiles (optional, for pinned start menu tiles) -->
 <meta name="msapplication-TileColor" content="#2a2a2a">
